--- a/src/main/res/layout/activity_adminshelters.xml
+++ b/src/main/res/layout/activity_adminshelters.xml
@@ -29,17 +29,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
-    <Button
+    <TextView
         android:id="@+id/goback"
-        android:layout_width="88dp"
-        android:layout_height="38dp"
+        android:layout_width="107dp"
+        android:layout_height="27dp"
+        android:clickable="true"
         android:text="Back"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.607" />
+        app:layout_constraintVertical_bias="0.92" />
 
     <TextView
         android:id="@+id/textView1"
