--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -221,7 +221,7 @@
         app:layout_constraintVertical_bias="0.963" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/admintitle"
         android:layout_width="87dp"
         android:layout_height="18dp"
         android:text="Admin User"
