--- a/app/src/main/res/layout/activity_search_request_civilian.xml
+++ b/app/src/main/res/layout/activity_search_request_civilian.xml
@@ -4,57 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactUsActivity">
+    tools:context=".SearchRequestCivilianActivity">
 
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="163dp"
-        android:layout_height="53dp"
-        android:text="Request's list"
-        android:textSize="27sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.093" />
-
-    <ListView
-        android:id="@+id/list_request"
-        android:descendantFocusability="afterDescendants"
-        android:layout_width="383dp"
-        android:layout_height="338dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.788" />
-
-    <TextView
-        android:id="@+id/listrequestbackmenu"
+    <Button
+        android:id="@+id/Baack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.949"
-        />
+        app:layout_constraintVertical_bias="0.976" />
 
-    <EditText
-        android:id="@+id/requestid"
+    <Button
+        android:id="@+id/Search_but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.455" />
+
+    <EditText
+        android:id="@+id/IDRequest"
+        android:layout_width="339dp"
+        android:layout_height="61dp"
         android:ems="10"
-        android:hint="Request's id"
+        android:hint="Request Number"
+        android:background="@drawable/imagesnew"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.188" />
-
-
+        app:layout_constraintVertical_bias="0.352" />
 </androidx.constraintlayout.widget.ConstraintLayout>
